# scop

./: CMakeLists.txt  CmakeLists.txt  Dependency.cmake  README.md  imgui.ini
shader/: fragment_shader.fs  gamma.fs  invert.fs  lighting.fs  simple.fs  simple.vs  texture.fs  texture.vs
src/: buffer.cpp  buffer.h  common.cpp  common.h  context.cpp  context.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  program.cpp  program.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_layout.cpp  vertex_layout.h
